# wheel_control

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY_TOPOLOGICAL_NAV.md  NAVIGATION_ARCHITECTURE.md  QUICK_START_GUIDE.md  README.md  TOPOLOGICAL_NAV_ARCHITECTURE_DIAGRAM.txt  TOPOLOGICAL_NAV_QUICKSTART.md  build_voice_llm_navigator.sh  install_splat_slam.sh  requirements.txt  setup_memory_data.sh  start_voice_web_bridge.sh  test_rs_launch_params.py
arduino/wheel_control_mega/: platformio.ini  wheel_control_mega.ino
arduino/wheel_control_mega/src/: main.cpp
docs/: ARCHITECTURE.md  IMPLEMENTATION_CHECKLIST.md  MEMORY_INTEGRATION.md  NAVIGATION_ARCHITECTURE.md  README.md  TOPOLOGICAL_NAVIGATION_ARCHITECTURE.md  VISUALIZATION_QUICK_START.md  VOICE_WEB_TESTING_GUIDE.md
docs/diagrams/: README.md  data_structures.d2  mapping_phase.d2  navigation_flow.d2  place_recognition.d2  ros2_architecture.d2  system_overview.d2
ros2_bridge/: teleop_keyboard.py
src/memory/: CMakeLists.txt  README.md  package.xml  setup.py
src/memory/config/: memory.yaml
src/memory/launch/: floorplan_with_view.launch.py  memory.launch.py
src/memory/memory/: __init__.py  episodic_memory_node.py  floorplan_converter.py  floorplan_converter_node.py  floorplan_manager_node.py  map_loader_node.py  semantic_memory_node.py
src/memory/resource/executables/: memory
src/realsense_nav/: CAMERA_OPTIONS.md  CMakeLists.txt  QUICKSTART.md  README.md  RGB_CAMERA_GUIDE.md  TOPOLOGICAL_NAV_README.md  package.xml  setup.cfg  setup.py  view_world.py
src/realsense_nav/action/: NavigateToJunction.action  NavigateToNode.action
src/realsense_nav/behavior_trees/: cone_navigation.xml
src/realsense_nav/config/: hardware.yaml  rgb_segmentation_params.yaml  scene_graph.rviz  segmentation_params.yaml
src/realsense_nav/include/realsense_nav/: bt_actions.hpp
src/realsense_nav/launch/: full_navigation.launch.py  junction_navigation.launch.py  pure_pursuit_nav.launch.py  realsense_nav.launch.py  rgb_full_navigation.launch.py  rgb_nav.launch.py  rviz_scene_graph.launch.py  training_mode.launch.py
src/realsense_nav/msg/: BehaviorState.msg  JunctionDetection.msg  JunctionInfo.msg  JunctionPath.msg  NavigationTask.msg
src/realsense_nav/nodes/: initial_pose_to_map_odom.py
src/realsense_nav/realsense_nav/: behavior_tree.py  behavior_tree_controller.py  behavior_tree_node.py  color_tuner.py  dinov3_embedding_node.py  goal_detection_node.py  llm_goal_detection.py  nav_monitor.py  nl_interpreter.py  pure_pursuit_controller.py  rgb_color_tuner.py  rgb_segmentation_node.py  scene_graph_mapper.py  scene_graph_node.py  scene_graph_viz.py  segmentation_node.py  topo_planner.py  view_world.py  vision_safety_node.py  yolo_detector_node.py  yolov8n.pt
src/realsense_nav/realsense_nav/navigation/: __init__.py  junction_navigator.py  junction_recognizer.py  junction_visibility_monitor.py  localization_manager.py  obstacle_aware_navigator.py  simple_odometry.py
src/realsense_nav/realsense_nav/planning/: __init__.py  graph_path_planner.py  voice_nav_parser.py
src/realsense_nav/realsense_nav/task/: __init__.py  destination_verifier.py
src/realsense_nav/realsense_nav/training/: __init__.py  enhanced_scene_graph_recorder.py  junction_manager_node.py  scene_graph_recorder.py  topo_map_builder.py  voice_command_node.py
src/realsense_nav/realsense_nav/visualization/: README.md
src/realsense_nav/scripts/: monitor_segmentation.py  motor_pwm_monitor.py  test_cameras.py  tune_yellow_cone.py  view_segmentation.py  view_world.py
src/realsense_nav/src/: behavior_tree_cpp_node.cpp  bt_actions.cpp
src/realsense_nav/srv/: GetLastPosition.srv  LoadMap.srv  RecordJunction.srv  SaveMap.srv
src/rovio/: PORTING_PLAN.md  README.md  package.xml
src/rovio/config/: ekf.yaml
src/rovio/include/rovio/: rovio_node.hpp
src/rovio/launch/: rovio_launch.py
src/rovio/params/: rovio_params.yaml
src/rovio/src/: rovio_main.cpp  rovio_node.cpp
src/segmentation/: __init__.py  package.xml  setup.py
src/segmentation/launch/: segformer.launch.py
src/segmentation/resource/: segmentation
src/segmentation/segmentation/: __init__.py  segformer_node_clean.py
src/voice_llm_navigator/: README.md  install_ament_hooks.sh  package.xml  setup.cfg  setup.py
src/voice_llm_navigator/config/: commands_mapping.yaml  llm_config.yaml
src/voice_llm_navigator/launch/: voice_navigation.launch.py  voice_web_bridge.launch.py
src/voice_llm_navigator/voice_llm_navigator/: local_llm_client.py  voice_navigation_node.py  voice_processor.py  voice_web_bridge.py
src/wheel_control/: package.xml  setup.py
src/wheel_control/config/: teleop_f310.yaml
src/wheel_control/launch/: bringup.launch.py
src/wheel_control/wheel_control/: __init__.py  serial_motor_bridge.py  teleop_keyboard.py
tools/: check_ollama.sh  mic_test.sh  save_topic_image.py  select_and_go.py  speech_to_text_tester.py  test_voice_web_integration.py  voice_io_tuner.py  voice_ollama_test.py
tools/voice_web_ui/: app.py
tools/voice_web_ui/static/: app.js  style.css
tools/voice_web_ui/templates/: index.html
